Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23944

hang with long compiler errors

XMLWordPrintable

    • 37ce45c21ec443246e13c01ca344ec15c962277a (qt-creator/qt-creator/master)

      sometimes c++ error messages can be quite verbose (thousands of tens of thousands of lines). in these cases i sometimes ran into hangs of qtcreator. this happened on multiple platforms (linux, macos).

      the stack trace implies that this happens somewhere in ProjectExplorer::BuildManager::addToOutputWindow, possibly when the appending too many lines without rate-limiting

        For Gerrit Dashboard: QTCREATORBUG-23944
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes